--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ dj-rest-auth==2.1.9
 Django==3.2.25
 django-allauth==0.44.0
 django-cloudinary-storage==0.3.0
+django-cors-headers==4.3.1
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
 oauthlib==3.2.2
